// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select field should render disabled input 1`] = `
<FieldTemplate
  description="Select me"
  descriptionId="mySelect-description"
  errorId="mySelect-error"
  errorMessage="My Error Message"
  id="mySelect"
  isValid={true}
  label="My Select title"
  labelAfter={true}
  required={true}
>
  <select
    aria-describedby="mySelect-description mySelect-error"
    aria-invalid={false}
    aria-required={true}
    autoFocus={true}
    className="form-control"
    disabled={true}
    id="mySelect"
    multiple={false}
    onChange={[Function]}
    readOnly={false}
    value="lol"
  >
    <option
      disabled={true}
      value=""
    >
      Please select a value
    </option>
    <option
      value="foo"
    >
      My foo title
    </option>
    <option
      value="bar"
    >
      My bar title
    </option>
    <option
      value="lol"
    >
      My lol title
    </option>
  </select>
</FieldTemplate>
`;

exports[`Select field should render readOnly input 1`] = `
<FieldTemplate
  description="Select me"
  descriptionId="mySelect-description"
  errorId="mySelect-error"
  errorMessage="My Error Message"
  id="mySelect"
  isValid={true}
  label="My Select title"
  labelAfter={true}
  required={true}
>
  <select
    aria-describedby="mySelect-description mySelect-error"
    aria-invalid={false}
    aria-required={true}
    autoFocus={true}
    className="form-control"
    id="mySelect"
    multiple={false}
    onChange={[Function]}
    readOnly={true}
    value="lol"
  >
    <option
      disabled={true}
      value=""
    >
      Please select a value
    </option>
    <option
      value="foo"
    >
      My foo title
    </option>
    <option
      value="bar"
    >
      My bar title
    </option>
    <option
      value="lol"
    >
      My lol title
    </option>
  </select>
</FieldTemplate>
`;

exports[`Select field should render select multiple 1`] = `
<FieldTemplate
  description="Select me"
  descriptionId="mySelect-description"
  errorId="mySelect-error"
  errorMessage="My Error Message"
  id="mySelect"
  isValid={true}
  label="My Select title"
  labelAfter={true}
  required={true}
>
  <select
    aria-describedby="mySelect-description mySelect-error"
    aria-invalid={false}
    aria-required={true}
    autoFocus={true}
    className="form-control"
    id="mySelect"
    multiple={true}
    onChange={[Function]}
    readOnly={false}
    value={
      Array [
        "foo",
        "lol",
      ]
    }
  >
    <option
      disabled={true}
      value=""
    >
      Please select a value
    </option>
    <option
      value="foo"
    >
      My foo title
    </option>
    <option
      value="bar"
    >
      My bar title
    </option>
    <option
      value="lol"
    >
      My lol title
    </option>
  </select>
</FieldTemplate>
`;

exports[`Select field should render simple select 1`] = `
<FieldTemplate
  description="Select me"
  descriptionId="mySelect-description"
  errorId="mySelect-error"
  errorMessage="My Error Message"
  id="mySelect"
  isValid={true}
  label="My Select title"
  labelAfter={true}
  required={true}
>
  <select
    aria-describedby="mySelect-description mySelect-error"
    aria-invalid={false}
    aria-required={true}
    autoFocus={true}
    className="form-control"
    id="mySelect"
    multiple={false}
    onChange={[Function]}
    readOnly={false}
    value="lol"
  >
    <option
      disabled={true}
      value=""
    >
      Please select a value
    </option>
    <option
      value="foo"
    >
      My foo title
    </option>
    <option
      value="bar"
    >
      My bar title
    </option>
    <option
      value="lol"
    >
      My lol title
    </option>
  </select>
</FieldTemplate>
`;

exports[`Select field should render simple select without placeholder 1`] = `
<FieldTemplate
  description="Select me"
  descriptionId="mySelect-description"
  errorId="mySelect-error"
  errorMessage="My Error Message"
  id="mySelect"
  isValid={true}
  label="My Select title"
  labelAfter={true}
  required={true}
>
  <select
    aria-describedby="mySelect-description mySelect-error"
    aria-invalid={false}
    aria-required={true}
    autoFocus={true}
    className="form-control"
    id="mySelect"
    multiple={false}
    onChange={[Function]}
    readOnly={false}
    value="lol"
  >
    <option
      disabled={true}
    />
    <option
      value="foo"
    >
      My foo title
    </option>
    <option
      value="bar"
    >
      My bar title
    </option>
    <option
      value="lol"
    >
      My lol title
    </option>
  </select>
</FieldTemplate>
`;
